# opt-SPTnet

./: .dockerignore  .editorconfig  .gitignore  .gitignore.submission  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPTnet_inference.py  SPTnet_training.py  SUBMISSION.md  compute_CRLB_matrix.m  constraints.txt  inference_script.py  pyproject.toml
.github/workflows/: ci.yml
context/: changes.md  context.md  csd3_baseline_inference.md  notes.md  plan.md  prompt.md  report_artifacts.md  rerun_matched_evals_csd3.md  style.md
docs/: Makefile  conf.py  index.rst  make.bat  segmentation.rst  training_data_generation.rst
docs/_templates/autosummary/: module.rst
docs/api/: index.rst
experiments/: README.md  eval_sptnet_tracks_with_teacher.py  eval_track_diffusion_teacher.py  generate_spatial_diffusion_visual.py  track_diffusion_common.py  train_track_diffusion_teacher.py
experiments/benchmarks/: README.md  analyze_benchmarks.py  make_report_figures.py  sptnet_final_30352182.out
experiments/benchmarks/results/: summary_epoch_total_seconds.md  summary_train_seconds.md
experiments/benchmarks/standard_new/: slurm_benchmark_29334514_metrics.txt  trained_modeltraining_log.txt
experiments/benchmarks/standard_old/: slurm_benchmark_29335769_metrics.txt  trained_modeltraining_log.txt
slurm/: README.md  finetune_perf_ablation_csd3.slurm  generate_diff_eval_csd3.slurm  generate_trainingdata_csd3.slurm  inference_diff_eval_csd3.slurm  inference_sptnet_csd3.slurm  train_scratch_ablation_csd3.slurm  train_sparse_track_diffusion_teacher_csd3.slurm  train_sptnet_benchmark_csd3.slurm  train_sptnet_csd3.slurm
src/sptnet/: __init__.py
src/sptnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sptnet/data/: __init__.py  conversion.py  inference_dataset.py  loaders.py  mat_dataset.py  trackmate.py
src/sptnet/inference/: __init__.py  cli.py  predict.py  results_io.py
src/sptnet/models/: __init__.py  backbone.py  sptnet.py  transformers.py
src/sptnet/segmentation/: __init__.py  io.py  split.py  stitch.py
src/sptnet/training/: __init__.py  cli.py  crlb.py  data_generator.py  losses.py  trainer.py
src/sptnet/visualization/: __init__.py  background.py  preprocess.py  results.py
tests/: conftest.py  test_cli_smoke.py  test_conversion.py  test_crlb.py  test_data.py  test_data_generator.py  test_docs_api_coverage.py  test_inference.py  test_inference_results_io.py  test_models.py  test_segmentation.py  test_trackmate.py  test_training.py  test_training_instrumentation.py  test_visualization.py  test_visualization_results.py
