[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sptnet"
version = "0.1.0"
description = "SPTnet models, datasets, training, and inference utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "positional-encodings[pytorch]",
    "scipy",
    "tifffile",
    "torch",
    "tqdm",
]

[project.optional-dependencies]
docs = [
    "sphinx",
]
test = [
    "pytest",
]

[project.scripts]
sptnet-hdf5-to-tiff = "sptnet.data.conversion:main"
sptnet-mat-to-tiff = "sptnet.data.conversion:main"
sptnet-compute-crlb = "sptnet.training.crlb:main"
sptnet-generate-training-data = "sptnet.training.data_generator:main"
sptnet-inference = "sptnet.inference.cli:main"
sptnet-train = "sptnet.training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
