[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sptnet"
version = "0.1.0"
description = "SPTnet models, datasets, training, and inference utilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frederick Lawrence" }]
keywords = [
    "single-particle-tracking",
    "microscopy",
    "deep-learning",
    "pytorch",
    "transformer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "h5py>=3.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "positional-encodings[pytorch]>=6.0",
    "scipy>=1.7",
    "tifffile>=2021.7.2",
    "torch>=2.4",
    "tqdm>=4.60",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4",
    "sphinx-rtd-theme",
]
notebook = [
    "ipykernel",
]
test = [
    "pytest>=7",
]
dev = [
    "build>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.urls]
Documentation = "https://app.readthedocs.org/projects/opt-sptnet/"
"Upstream SPTnet" = "https://github.com/HuanglabPurdue/SPTnet"

[project.scripts]
sptnet-hdf5-to-tiff = "sptnet.data.conversion:main"
sptnet-mat-to-tiff = "sptnet.data.conversion:main"
sptnet-compute-crlb = "sptnet.training.crlb:main"
sptnet-combine-trackmate = "sptnet.data.trackmate:main"
sptnet-generate-training-data = "sptnet.training.data_generator:main"
sptnet-inference = "sptnet.inference.cli:main"
sptnet-preprocess = "sptnet.visualization.preprocess:main"
sptnet-segment = "sptnet.segmentation.split:main"
sptnet-stitch = "sptnet.segmentation.stitch:main"
sptnet-train = "sptnet.training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A conservative starter rule set (pyflakes + a subset of pycodestyle + isort).
# Kept intentionally small so existing style debt does not block the release;
# expand over time. The CI lint job is non-blocking for now.
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced hard
    "E741",  # ambiguous variable names (l, I) appear in math-heavy code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
# Tests use the `torch = pytest.importorskip("torch")` guard before importing
# sptnet modules, so module-level imports legitimately follow a statement.
"tests/**" = ["E402"]
